separando os notebooks

--- a/A2/bancos.ipynb
+++ b/A2/bancos.ipynb
@@ -27,8 +27,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criando um DataFrame em GeoPandas que contém os dados dos municípios do Brasil"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "gjson = \"geojs-100-mun.json\"\n",
+    "br = gpd.read_file(gjson)\n",
+    "br = br.drop(columns = 'description')\n",
+    "print(type(br))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando em um DataFrame Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "br = pd.DataFrame(br)\n",
+    "print(type(br))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando o tipo dos dados da coluna geometria em string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br['geometry']= br['geometry'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fazendo a conexão com o sqlite para criar a base de dados com os municípios do Brasil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +121,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dados sobre o PIB de cada município"
+    "### Adicionando os dados do DataFrame Pandas na tabela criada com o sqlite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br.to_sql('brasil', con=conn, if_exists='replace')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dados sobre o PIB de cada município"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criando um DataFrame em GeoPandas que contém os dados do PIB nos municípios do Brasil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "gjson = \"geojs-100-mun.json\"\n",
+    "pib = gpd.read_file(gjson)\n",
+    "pib = pib.drop(columns = 'description')\n",
+    "print(type(pib))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando em um DataFrame Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pib = pd.DataFrame(pib)\n",
+    "print(type(pib))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando o tipo dos dados da coluna geometria em string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pib['geometry']= pib['geometry'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fazendo a conexão com o sqlite para criar a base de dados com os municípios do Brasil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +238,23 @@
     "             'legenda' text,\n",
     "             'classe' INT,\n",
     "             'geometry' text)''')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adicionando os dados do DataFrame Pandas na tabela criada com o sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pib.to_sql('pib', con=conn, if_exists='replace')\n",
     "conn.commit()"
    ]
   }
