plotando alguns mapas

--- a/A2/analises.ipynb
+++ b/A2/analises.ipynb
@@ -77,8 +77,79 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1100015</td>\n",
+       "      <td>Alta Floresta D'Oeste</td>\n",
+       "      <td>POLYGON ((-62.182088857 -11.8668597878, -62.16...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1100023</td>\n",
+       "      <td>Ariquemes</td>\n",
+       "      <td>POLYGON ((-62.5359497334 -9.7318235272, -62.50...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1100031</td>\n",
+       "      <td>Cabixi</td>\n",
+       "      <td>POLYGON ((-60.3993982597 -13.4558418276, -60.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1100049</td>\n",
+       "      <td>Cacoal</td>\n",
+       "      <td>POLYGON ((-61.0005091459 -11.3979601547, -61.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1100056</td>\n",
+       "      <td>Cerejeiras</td>\n",
+       "      <td>POLYGON ((-61.5004673575 -13.0039232604, -61.4...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "geopandas.geodataframe.GeoDataFrame"
+       "        id                   name  \\\n",
+       "0  1100015  Alta Floresta D'Oeste   \n",
+       "1  1100023              Ariquemes   \n",
+       "2  1100031                 Cabixi   \n",
+       "3  1100049                 Cacoal   \n",
+       "4  1100056             Cerejeiras   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-62.182088857 -11.8668597878, -62.16...  \n",
+       "1  POLYGON ((-62.5359497334 -9.7318235272, -62.50...  \n",
+       "2  POLYGON ((-60.3993982597 -13.4558418276, -60.4...  \n",
+       "3  POLYGON ((-61.0005091459 -11.3979601547, -61.0...  \n",
+       "4  POLYGON ((-61.5004673575 -13.0039232604, -61.4...  "
       ]
      },
      "execution_count": 4,
@@ -89,32 +160,12 @@
    "source": [
     "br = gpd.GeoDataFrame(br)\n",
     "br.head()\n",
-    "type(br)"
+    "br.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id          object\n",
-      "name        object\n",
-      "geometry    object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "br['geometry']= br['geometry'].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +275,7 @@
        "4        2653.75       1  POLYGON Z ((-42.82668541 -5.34802917 0, -42.82...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +293,222 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5317</th>\n",
+       "      <td>5200050</td>\n",
+       "      <td>Abadia De Goiás</td>\n",
+       "      <td>POLYGON ((-49.4116188754 -16.7404731638, -49.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2242</th>\n",
+       "      <td>3100104</td>\n",
+       "      <td>Abadia Dos Dourados</td>\n",
+       "      <td>POLYGON ((-47.4440984617 -18.1584651772, -47.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5318</th>\n",
+       "      <td>5200100</td>\n",
+       "      <td>Abadiânia</td>\n",
+       "      <td>POLYGON ((-48.8413680012 -16.0044227658, -48.7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>1500107</td>\n",
+       "      <td>Abaetetuba</td>\n",
+       "      <td>POLYGON ((-48.8124539972 -1.6016538932, -48.80...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2243</th>\n",
+       "      <td>3100203</td>\n",
+       "      <td>Abaeté</td>\n",
+       "      <td>POLYGON ((-45.1820043274 -18.8875672971, -45.1...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                 name  \\\n",
+       "5317  5200050      Abadia De Goiás   \n",
+       "2242  3100104  Abadia Dos Dourados   \n",
+       "5318  5200100            Abadiânia   \n",
+       "151   1500107           Abaetetuba   \n",
+       "2243  3100203               Abaeté   \n",
+       "\n",
+       "                                               geometry  \n",
+       "5317  POLYGON ((-49.4116188754 -16.7404731638, -49.4...  \n",
+       "2242  POLYGON ((-47.4440984617 -18.1584651772, -47.4...  \n",
+       "5318  POLYGON ((-48.8413680012 -16.0044227658, -48.7...  \n",
+       "151   POLYGON ((-48.8124539972 -1.6016538932, -48.80...  \n",
+       "2243  POLYGON ((-45.1820043274 -18.8875672971, -45.1...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "br = br.sort_values('name')\n",
+    "br['name'] = br['name'].str.title()\n",
+    "br.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>Censo</th>\n",
+       "      <th>PIB</th>\n",
+       "      <th>Pop_est_2009</th>\n",
+       "      <th>PIB_percapita</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3330</th>\n",
+       "      <td>GOIÁS</td>\n",
+       "      <td>Abadia De Goiás</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>38975.133</td>\n",
+       "      <td>6301.0</td>\n",
+       "      <td>6185.55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MULTIPOLYGON (((-49.4433195 -16.72349495, -49....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3492</th>\n",
+       "      <td>MINAS GERAIS</td>\n",
+       "      <td>Abadia Dos Dourados</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>71222.170</td>\n",
+       "      <td>6805.0</td>\n",
+       "      <td>10466.15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MULTIPOLYGON (((-47.42610987 -18.16379816, -47...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3976</th>\n",
+       "      <td>GOIÁS</td>\n",
+       "      <td>Abadiânia</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>82400.490</td>\n",
+       "      <td>13378.0</td>\n",
+       "      <td>6159.40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MULTIPOLYGON (((-48.79593567 -16.01553113, -48...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2115</th>\n",
+       "      <td>PARÁ</td>\n",
+       "      <td>Abaetetuba</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>456256.940</td>\n",
+       "      <td>139819.0</td>\n",
+       "      <td>3263.20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MULTIPOLYGON (((-48.80042608 -1.60628755, -48....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1480</th>\n",
+       "      <td>MINAS GERAIS</td>\n",
+       "      <td>Abaeté</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>239440.550</td>\n",
+       "      <td>23258.0</td>\n",
+       "      <td>10294.98</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MULTIPOLYGON (((-45.09780599 -19.06240847, -45...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                UF                 nome Censo         PIB  Pop_est_2009  \\\n",
+       "3330         GOIÁS      Abadia De Goiás  2010   38975.133        6301.0   \n",
+       "3492  MINAS GERAIS  Abadia Dos Dourados  2010   71222.170        6805.0   \n",
+       "3976         GOIÁS            Abadiânia  2010   82400.490       13378.0   \n",
+       "2115          PARÁ           Abaetetuba  2010  456256.940      139819.0   \n",
+       "1480  MINAS GERAIS               Abaeté  2010  239440.550       23258.0   \n",
+       "\n",
+       "      PIB_percapita  classe                                           geometry  \n",
+       "3330        6185.55       1  MULTIPOLYGON (((-49.4433195 -16.72349495, -49....  \n",
+       "3492       10466.15       2  MULTIPOLYGON (((-47.42610987 -18.16379816, -47...  \n",
+       "3976        6159.40       1  MULTIPOLYGON (((-48.79593567 -16.01553113, -48...  \n",
+       "2115        3263.20       1  MULTIPOLYGON (((-48.80042608 -1.60628755, -48....  \n",
+       "1480       10294.98       2  MULTIPOLYGON (((-45.09780599 -19.06240847, -45...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pib = pib.sort_values('nome')\n",
+    "pib['nome'] = pib['nome'].str.title()\n",
+    "pib.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +880,7 @@
        "TOCANTINS            10117.758273   7931.200  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +907,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
