adicionando nova base de dados

--- a/A2/analises.ipynb
+++ b/A2/analises.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "median   80591.720000  11203.000000    8393.170000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
     }
    ],
    "source": [
-    "br.plot(color='green', edgecolor='None', figsize=(15,8))"
+    "pib.plot(color='green', edgecolor='None', figsize=(15,8))"
    ]
   },
   {
