--- a/A2/bancos.ipynb
+++ b/A2/bancos.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "gjson1 = \"geojs-100-mun.json\"\n",
     "pib = gpd.read_file(gjson1)\n",
@@ -169,9 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "pib = pd.DataFrame(pib)\n",
     "print(type(pib))"
@@ -186,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +238,7 @@
     "             'legenda' text,\n",
     "             'classe' INT,\n",
     "             'geometry' text)''')\n",
-    "conn.commit()"
+    "conn1.commit()"
    ]
   },
   {
@@ -234,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,11 +292,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando em um DataFrame Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "racial = pd.DataFrame(racial)\n",
+    "print(type(racial))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando o tipo dos dados da coluna geometria em string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "racial['geometry']= racial['geometry'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fazendo a conexão com o sqlite para criar a base de dados com os dados raciais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn2 = sqlite3.connect(os.path.join('racial.db'))\n",
+    "cur2 = conn2.cursor()\n",
+    "cur2.execute('''CREATE TABLE IF NOT EXISTS racial\n",
+    "             ('id' INT NOT NULL,\n",
+    "             'index' INT PRIMARY KEY NOT NULL,\n",
+    "             'gid' INT,\n",
+    "             'UF' text,\n",
+    "             'nome' text,\n",
+    "             'Censo' text,\n",
+    "             'POP_TOT' FLOAT,\n",
+    "             'Pessoas_Pretas' FLOAT,\n",
+    "             'PER_Pessoas_Pretas' FLOAT,\n",
+    "             'Descrição' text,\n",
+    "             'legenda' text,\n",
+    "             'classe' INT,\n",
+    "             'geometry' text)''')\n",
+    "conn2.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adicionando os dados do DataFrame Pandas na tabela criada com o sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "racial.to_sql('racial', con=conn2, if_exists='replace')\n",
+    "conn2.commit()"
+   ]
   }
  ],
  "metadata": {
