Arrumando os problemas com banco de dados

--- a/A2/mapas.ipynb
+++ b/A2/mapas.ipynb
@@ -14,6 +14,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importando os bancos de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect(os.path.join('pib.db'))\n",
+    "query= \"SELECT * FROM pib\"\n",
+    "pib = pd.read_sql(query,conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect(os.path.join('racial.db'))\n",
+    "query= \"SELECT * FROM racial\"\n",
+    "racial = pd.read_sql(query,conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformando os DataFrames para o tipo GeoDataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pib['geometry']=gpd.GeoSeries.from_wkt(pib['geometry'])\n",
+    "pib = gpd.GeoDataFrame(pib, geometry='geometry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "racial['geometry']=gpd.GeoSeries.from_wkt(racial['geometry'])\n",
+    "racial = gpd.GeoDataFrame(racial, geometry='geometry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -711,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
