--- a/A2/bancos.ipynb
+++ b/A2/bancos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,121 +23,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Municípios do Brasil"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Criando um DataFrame em GeoPandas que contém os dados dos municípios do Brasil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "gjson = \"geojs-100-mun.json\"\n",
-    "br = gpd.read_file(gjson)\n",
-    "br = br.drop(columns = 'description')\n",
-    "print(type(br))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transformando em um DataFrame Pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "br = pd.DataFrame(br)\n",
-    "print(type(br))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transformando o tipo dos dados da coluna geometria em string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "br['geometry']= br['geometry'].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fazendo a conexão com o sqlite para criar a base de dados com os municípios do Brasil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = sqlite3.connect(os.path.join('brasil.db'))\n",
-    "cur = conn.cursor()\n",
-    "cur.execute('''CREATE TABLE IF NOT EXISTS brasil\n",
-    "             ('id' INT NOT NULL,\n",
-    "             'index' INT PRIMARY KEY NOT NULL,\n",
-    "             'name' text, \n",
-    "             'geometry' text)''')\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Adicionando os dados do DataFrame Pandas na tabela criada com o sqlite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "br.to_sql('brasil', con=conn, if_exists='replace')\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Dados sobre o PIB de cada município"
    ]
   },
@@ -150,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,10 +47,9 @@
     }
    ],
    "source": [
-    "gjson1 = \"geojs-100-mun.json\"\n",
-    "pib = gpd.read_file(gjson1)\n",
-    "pib = pib.drop(columns = 'description')\n",
-    "print(type(pib))"
+    "gpd_pib = gpd.read_file(\"pib.json\")\n",
+    "gpd_pib = gpd_pib.drop(columns = 'Descrição') #descrição estava escrito \"produto interno bruto\" em todas as linhas\n",
+    "print(type(gpd_pib))"
    ]
   },
   {
@@ -177,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,8 +73,8 @@
     }
    ],
    "source": [
-    "pib = pd.DataFrame(pib)\n",
-    "print(type(pib))"
+    "pd_pib = pd.DataFrame(gpd_pib)\n",
+    "print(type(pd_pib))"
    ]
   },
   {
@@ -202,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pib['geometry']= pib['geometry'].astype(str)"
+    "pd_pib['geometry']= pd_pib['geometry'].astype(str)"
    ]
   },
   {
@@ -218,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn1 = sqlite3.connect(os.path.join('pib.db'))\n",
-    "cur1 = conn1.cursor()\n",
-    "cur1.execute('''CREATE TABLE IF NOT EXISTS pib\n",
+    "conn = sqlite3.connect(os.path.join('pib.db'))\n",
+    "cur = conn.cursor()\n",
+    "cur.execute('''CREATE TABLE IF NOT EXISTS pib\n",
     "             ('id' INT NOT NULL,\n",
     "             'index' INT PRIMARY KEY NOT NULL,\n",
     "             'gid' INT,\n",
@@ -234,11 +118,10 @@
     "             'PIB' FLOAT,\n",
     "             'Pop_est_2009' FLOAT,\n",
     "             'PIB_percapita' FLOAT,\n",
-    "             'Descrição' text,\n",
     "             'legenda' text,\n",
     "             'classe' INT,\n",
     "             'geometry' text)''')\n",
-    "conn1.commit()"
+    "conn.commit()"
    ]
   },
   {
@@ -250,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pib.to_sql('pib', con=conn, if_exists='replace')\n",
+    "pd_pib.to_sql('pib', con=conn, if_exists='replace')\n",
     "conn.commit()"
    ]
   },
@@ -274,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,9 +169,8 @@
     }
    ],
    "source": [
-    "gjson2 = \"raciais.json\"\n",
-    "racial = gpd.read_file(gjson2)\n",
-    "print(type(racial))"
+    "gpd_racial = gpd.read_file('raciais.json')\n",
+    "print(type(gpd_racial))"
    ]
   },
   {
@@ -300,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,8 +194,8 @@
     }
    ],
    "source": [
-    "racial = pd.DataFrame(racial)\n",
-    "print(type(racial))"
+    "pd_racial = pd.DataFrame(gpd_racial)\n",
+    "print(type(pd_racial))"
    ]
   },
   {
@@ -325,11 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "racial['geometry']= racial['geometry'].astype(str)"
+    "pd_racial['geometry']= pd_racial['geometry'].astype(str)"
    ]
   },
   {
@@ -341,13 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn2 = sqlite3.connect(os.path.join('racial.db'))\n",
-    "cur2 = conn2.cursor()\n",
-    "cur2.execute('''CREATE TABLE IF NOT EXISTS racial\n",
+    "conn = sqlite3.connect(os.path.join('racial.db'))\n",
+    "cur = conn.cursor()\n",
+    "cur.execute('''CREATE TABLE IF NOT EXISTS racial\n",
     "             ('id' INT NOT NULL,\n",
     "             'index' INT PRIMARY KEY NOT NULL,\n",
     "             'gid' INT,\n",
@@ -361,7 +243,7 @@
     "             'legenda' text,\n",
     "             'classe' INT,\n",
     "             'geometry' text)''')\n",
-    "conn2.commit()"
+    "conn.commit()"
    ]
   },
   {
@@ -373,18 +255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "racial.to_sql('racial', con=conn2, if_exists='replace')\n",
-    "conn2.commit()"
+    "pd_racial.to_sql('racial', con=conn, if_exists='replace')\n",
+    "conn.commit()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
