--- a/A2/rascunho.ipynb
+++ b/A2/rascunho.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "1  MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,116 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "gjson1 = \"pib.json\"\n",
     "pib = gpd.read_file(gjson1)\n",
     "pib = pib.drop(columns = 'id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>gid</th>\n",
-       "      <th>UF</th>\n",
-       "      <th>nome</th>\n",
-       "      <th>Censo</th>\n",
-       "      <th>POP_TOT</th>\n",
-       "      <th>Pessoas_Pretas</th>\n",
-       "      <th>PER_Pessoas_Pretas</th>\n",
-       "      <th>descricao</th>\n",
-       "      <th>legenda</th>\n",
-       "      <th>classe</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...</td>\n",
-       "      <td>215</td>\n",
-       "      <td>BAHIA</td>\n",
-       "      <td>Tremedal</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>17029.0</td>\n",
-       "      <td>827</td>\n",
-       "      <td>4.856421</td>\n",
-       "      <td>Percentual de pessoas residentes de cor ou raç...</td>\n",
-       "      <td>4,22% - 7,79%</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...</td>\n",
-       "      <td>306</td>\n",
-       "      <td>RIO GRANDE DO SUL</td>\n",
-       "      <td>Turuçu</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>3522.0</td>\n",
-       "      <td>133</td>\n",
-       "      <td>3.776264</td>\n",
-       "      <td>Percentual de pessoas residentes de cor ou raç...</td>\n",
-       "      <td>- 4,22%</td>\n",
-       "      <td>1</td>\n",
-       "      <td>MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  id  gid                 UF  \\\n",
-       "0  vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...  215              BAHIA   \n",
-       "1  vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...  306  RIO GRANDE DO SUL   \n",
-       "\n",
-       "       nome Censo  POP_TOT  Pessoas_Pretas  PER_Pessoas_Pretas  \\\n",
-       "0  Tremedal  2010  17029.0             827            4.856421   \n",
-       "1    Turuçu  2010   3522.0             133            3.776264   \n",
-       "\n",
-       "                                           descricao        legenda  classe  \\\n",
-       "0  Percentual de pessoas residentes de cor ou raç...  4,22% - 7,79%       2   \n",
-       "1  Percentual de pessoas residentes de cor ou raç...        - 4,22%       1   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...  \n",
-       "1  MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "racial['nome'] = racial['nome'].str.title()\n",
-    "racial.head(2)"
    ]
   },
   {
@@ -286,19 +183,101 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4229</th>\n",
-       "      <td>254</td>\n",
-       "      <td>SERGIPE</td>\n",
-       "      <td>Arauá</td>\n",
+       "      <th>0</th>\n",
+       "      <td>215</td>\n",
+       "      <td>BAHIA</td>\n",
+       "      <td>Tremedal</td>\n",
        "      <td>2010</td>\n",
-       "      <td>63633.420</td>\n",
-       "      <td>12042.0</td>\n",
-       "      <td>5284.29</td>\n",
+       "      <td>57883.992</td>\n",
+       "      <td>18433.0</td>\n",
+       "      <td>3140.24</td>\n",
        "      <td>Produto Interno Bruto per capita</td>\n",
        "      <td>- 9639.65</td>\n",
        "      <td>1</td>\n",
-       "      <td>MULTIPOLYGON (((-37.50771 -11.27151, -37.50658...</td>\n",
+       "      <td>MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>306</td>\n",
+       "      <td>RIO GRANDE DO SUL</td>\n",
+       "      <td>Turuçu</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>45723.875</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>11430.97</td>\n",
+       "      <td>Produto Interno Bruto per capita</td>\n",
+       "      <td>9639.65 - 22144.80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gid                 UF      nome Censo        PIB  Pop_est_2009  \\\n",
+       "0  215              BAHIA  Tremedal  2010  57883.992       18433.0   \n",
+       "1  306  RIO GRANDE DO SUL    Turuçu  2010  45723.875        4000.0   \n",
+       "\n",
+       "   PIB_percapita                         Descrição             legenda  \\\n",
+       "0        3140.24  Produto Interno Bruto per capita           - 9639.65   \n",
+       "1       11430.97  Produto Interno Bruto per capita  9639.65 - 22144.80   \n",
+       "\n",
+       "   classe                                           geometry  \n",
+       "0       1  MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...  \n",
+       "1       2  MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pib['nome'] = pib['nome'].str.title()\n",
+    "pib.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gid</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>Censo</th>\n",
+       "      <th>PIB</th>\n",
+       "      <th>Pop_est_2009</th>\n",
+       "      <th>PIB_percapita</th>\n",
+       "      <th>Descrição</th>\n",
+       "      <th>legenda</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
        "      <th>3330</th>\n",
        "      <td>1076</td>\n",
@@ -313,25 +292,39 @@
        "      <td>1</td>\n",
        "      <td>MULTIPOLYGON (((-49.44332 -16.72349, -49.44079...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3492</th>\n",
+       "      <td>2687</td>\n",
+       "      <td>MINAS GERAIS</td>\n",
+       "      <td>Abadia Dos Dourados</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>71222.170</td>\n",
+       "      <td>6805.0</td>\n",
+       "      <td>10466.15</td>\n",
+       "      <td>Produto Interno Bruto per capita</td>\n",
+       "      <td>9639.65 - 22144.80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MULTIPOLYGON (((-47.42611 -18.16380, -47.42276...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       gid       UF             nome Censo        PIB  Pop_est_2009  \\\n",
-       "4229   254  SERGIPE            Arauá  2010  63633.420       12042.0   \n",
-       "3330  1076    GOIÁS  Abadia De Goiás  2010  38975.133        6301.0   \n",
+       "       gid            UF                 nome Censo        PIB  Pop_est_2009  \\\n",
+       "3330  1076         GOIÁS      Abadia De Goiás  2010  38975.133        6301.0   \n",
+       "3492  2687  MINAS GERAIS  Abadia Dos Dourados  2010  71222.170        6805.0   \n",
        "\n",
-       "      PIB_percapita                         Descrição     legenda  classe  \\\n",
-       "4229        5284.29  Produto Interno Bruto per capita   - 9639.65       1   \n",
-       "3330        6185.55  Produto Interno Bruto per capita   - 9639.65       1   \n",
+       "      PIB_percapita                         Descrição             legenda  \\\n",
+       "3330        6185.55  Produto Interno Bruto per capita           - 9639.65   \n",
+       "3492       10466.15  Produto Interno Bruto per capita  9639.65 - 22144.80   \n",
        "\n",
-       "                                               geometry  \n",
-       "4229  MULTIPOLYGON (((-37.50771 -11.27151, -37.50658...  \n",
-       "3330  MULTIPOLYGON (((-49.44332 -16.72349, -49.44079...  "
+       "      classe                                           geometry  \n",
+       "3330       1  MULTIPOLYGON (((-49.44332 -16.72349, -49.44079...  \n",
+       "3492       2  MULTIPOLYGON (((-47.42611 -18.16380, -47.42276...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +927,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -948,7 +941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
